<resources>
    <string name="app_name">Tesa Garson Uygulamasi</string>
    <string name="loginText">Giriş</string>
    <string name="enterName">Kullanıcı Adı Giriniz</string>
    <string name="enterPass">Şifre Giriniz</string>
    <string name="attemptLeft">Kalan Deneme:</string>
    <string name="loginButton">login</string>
    <string name="cancelButton">Cancel</string>
    <string name="addButton">+</string>
    <string name="removeButton">-</string>
    <string name="sendButton">Ekle</string>
    <string name="deleteButton">Sil</string></resources>
