<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:paddingBottom="16dp"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="16dp"
    tools:context="com.example.td190.tesagarson.ActivityLogin">

    <TextView
        android:text="@string/loginText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/loginText"
        android:textColor="#7F0000"
        android:textSize="35dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/nameText"
        android:hint="@string/enterName"
        android:focusable="true"
        android:textColorHighlight="#ff7eff15"
        android:textColorHint="#848484"
        android:layout_marginTop="46dp"
        android:layout_below="@+id/foodView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/foodView"
        android:src="@drawable/foo_2"
        android:layout_below="@+id/loginText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/passText"
        android:layout_below="@+id/nameText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/nameText"
        android:layout_alignEnd="@+id/nameText"
        android:textColorHint="#848484"
        android:hint="@string/enterPass" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/attemptLeft"
        android:id="@+id/attemptLeft"
        android:layout_below="@+id/passText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="#7F0000"
        android:textSize="25dp"
        android:layout_marginLeft="2dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New Text"
        android:id="@+id/textView"
        android:layout_alignTop="@+id/attemptLeft"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignBottom="@+id/attemptLeft"
        android:textSize="25dp"
        android:layout_marginRight="75dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loginButton"
        android:id="@+id/loginButton"
        android:layout_alignParentBottom="true"
        android:background="#7F0000"
        android:textColor="#FFFFFF"
        android:layout_toLeftOf="@+id/loginText"
        android:layout_toStartOf="@+id/loginText" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancelButton"
        android:id="@+id/cancelButton"
        android:layout_alignParentBottom="true"
        android:textColor="#FFFFFF"
        android:background="#7F0000"
        android:layout_toRightOf="@+id/loginText"
        android:layout_toEndOf="@+id/loginText" />
</RelativeLayout>
