<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.td190.tesagarson.RestaurantMenuActivity"
    android:id="@+id/listview_menu_product">

    <ListView
        android:layout_width="220dp"
        android:layout_height="600dp"
        android:layout_marginTop="30dp"
        android:id="@+id/listView_menu_cat"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        style="@style/listview_style"/>

    <ListView
        android:layout_width="220dp"
        android:layout_height="600dp"
        android:layout_marginTop="30dp"
        android:id="@+id/listview_menu_pro"
        android:layout_alignParentTop="true"
        style="@style/listview_style"
        android:layout_toEndOf="@+id/listView_menu_cat" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Adet:"
        android:id="@+id/piece"
        android:layout_below="@+id/listview_menu_pro"
        android:layout_alignStart="@+id/listview_menu_pro" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addButton"
        android:id="@+id/addButton"
        android:textColor="#FFFFFF"
        android:background="#7F0000"
        android:layout_below="@+id/listview_menu_pro"
        android:layout_alignRight="@+id/listview_menu_pro" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/removeButton"
        android:id="@+id/removeButton"
        android:textColor="#FFFFFF"
        android:background="#7F0000"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/addButton"
        android:layout_alignRight="@+id/listview_menu_pro" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sendButton"
        android:id="@+id/sendButton"
        android:textColor="#FFFFFF"
        android:background="#7F0000"
        android:layout_below="@+id/choosen"
        android:layout_alignStart="@+id/choosen" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/deleteButton"
        android:id="@+id/deleteButton"
        android:textColor="#FFFFFF"
        android:background="#7F0000"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/sendButton"
        android:layout_alignStart="@+id/sendButton" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/quantity"
        android:text=""
        android:layout_below="@+id/piece"
        android:layout_alignLeft="@+id/listview_menu_pro"
        android:textSize="25dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Kategoriler:"
        android:id="@+id/menu_cat_text"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/listView_menu_cat" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Kategori İçerik:"
        android:id="@+id/menu_product_text"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/listview_menu_pro" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Siparişler:"
        android:id="@+id/menu_content_name"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/choosen" />

    <GridView
        android:layout_height="600dp"
        android:layout_width="wrap_content"
        android:layout_marginTop="30dp"
        android:id="@+id/choosen"
        android:numColumns="1"
        android:layout_toEndOf="@+id/listview_menu_pro"
        style="@style/listview_style"></GridView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Porsiyon:"
        android:id="@+id/portion"
        android:layout_below="@+id/listView_menu_cat"
        android:layout_alignStart="@+id/listView_menu_cat" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="+"
        android:id="@+id/addPortion"
        android:textColor="#FFFFFF"
        android:background="#7F0000"
        android:layout_below="@+id/listView_menu_cat"
        android:layout_alignRight="@+id/listView_menu_cat" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="-"
        android:id="@+id/removePortion"
        android:textColor="#FFFFFF"
        android:background="#7F0000"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/addPortion"
        android:layout_alignRight="@+id/listView_menu_cat" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/quantityP"
        android:text=""
        android:layout_below="@+id/portion"
        android:layout_alignLeft="@+id/listView_menu_cat"
        android:textSize="25dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Gönder"
        android:id="@+id/sendToCenter"
        android:textColor="#FFFFFF"
        android:background="#7F0000"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/choosen"
        android:layout_alignRight="@+id/choosen"
        android:layout_alignBottom="@+id/deleteButton"/>


</RelativeLayout>
